<?xml version="1.0"?>
<package format="2">
  <name>robotis_device</name>
  <version>0.3.0</version>
  <description>
    The package that manages device information of ROBOTIS robots.
    This package is used when reading device information with the robot information file
    from the robotis_controller package.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
</package>
