<?xml version="1.0"?>
<package format="2">
  <name>robotis_framework</name>
  <version>0.3.0</version>
  <description>ROS packages for the robotis_framework (meta package)</description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <url type="website">http://wiki.ros.org/robotis_framework</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/robotis_framework_packages/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robotis_controller</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_framework_common</build_depend>

  <build_export_depend>robotis_controller</build_export_depend>
  <build_export_depend>robotis_device</build_export_depend>
  <build_export_depend>robotis_framework_common</build_export_depend>

  <exec_depend>robotis_controller</exec_depend>
  <exec_depend>robotis_device</exec_depend>
  <exec_depend>robotis_framework_common</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
