<?xml version="1.0"?>
<package>
  <name>robotis_framework_common</name>
  <version>0.1.0</version>
  <description>The robotis_framework_common package</description>
  <license>BSD</license>
  <author email="zerom@robotis.com">zerom</author>
  <maintainer email="pyo@robotis.com">pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
