<?xml version="1.0"?>
<package format="2">
  <name>robotis_framework_common</name>
  <version>0.2.6</version>
  <description>
    The package contains commonly used Headers for the ROBOTIS Framework.
  </description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework</url>
  <url type="website">http://wiki.ros.org/robotis_framework_common</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>robotis_device</depend>
</package>
