<?xml version="1.0"?>
<package format="2">
  <name>robotis_framework_common</name>
  <version>0.2.9</version>
  <description>The package contains commonly used Headers for the ROBOTIS Framework.</description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <url type="website">http://wiki.ros.org/robotis_framework_common</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/robotis_framework_packages/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>robotis_device</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>robotis_device</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>robotis_device</exec_depend>

</package>
